initial setup of blogs

--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,11 @@
 .navbar-brand > img {
   max-height: 36px;
 }
+
+.quarto-title-banner {
+  color: #6c757d;
+} 
+
+div.sidebar.sidebar-navigation.rollup.quarto-sidebar-toggle-contents, nav.sidebar.sidebar-navigation:not(.rollup) {
+  background-color: #FFFFFF;
+}
