Fix styling errors with sidebar and TOC

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* css styles */
+/*-- css styles --*/
 .navbar-brand > img {
   max-height: 36px;
 }
@@ -6,7 +6,3 @@
 .quarto-title-banner {
   color: #6c757d;
 } 
-
-div.sidebar.sidebar-navigation.rollup.quarto-sidebar-toggle-contents, nav.sidebar.sidebar-navigation:not(.rollup) {
-  background-color: #FFFFFF;
-}
