added footer image to metadata

--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,10 @@
 .quarto-title-banner {
   color: #6c757d;
 } 
+
+.dsb {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
+}
