--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,69 @@
 /*-- css styles --*/
-.navbar-brand > img {
-  max-height: 36px;
+@media (min-width: 991.98px) {
+  #quarto-header {
+    border-bottom: 0.5px solid black;
+  }
 }
 
-.quarto-title-banner {
-  color: #6c757d;
-} 
+.navbar {
+  max-height: 475px;
+}
 
-.dsb {
-  display: block;
+.navbar-logo {
+  max-height: 150px;
+  width: auto;
+  padding-right: 4px;
+  align-items: baseline;
+}
+
+.navbar > .container,
+.navbar > .container-fluid,
+.navbar > .container-sm,
+.navbar > .container-md,
+.navbar > .container-lg,
+.navbar > .container-xl,
+.navbar > .container-xxl {
+  display: flex;
+  max-height: 475px;
+  flex-wrap: inherit;
+  align-items: baseline;
+  justify-content: center;
+}
+
+h1, .h1,
+h2,
+.h2,
+h3,
+.h3,
+h4,
+.h4,
+h5,
+.h5,
+h6,
+.h6 {
+  text-transform: none;
+  letter-spacing: 3px;
+}
+
+/* .content-block {
+  padding-top: 20px;
+  padding-bottom: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+
+@media(min-width: 900px) {
+.content-block {
+  margin-left: 50px;
+  margin-right: 50px;
+}
+}
+
+@media (min-width: 1200px) {
+.content-block {
+  max-width: 1100px;
   margin-left: auto;
   margin-right: auto;
-  width: 200px;
 }
+} */
