more work on home design

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
 /*-- css styles --*/
-@media (min-width: 991.98px) {
-  #quarto-header {
-    border-bottom: 0.5px solid black;
-  }
+#quarto-header {
+  border-bottom: 0.5px solid black;
+}
+
+.alt-background {
+  background-color: black;
 }
 
 .navbar {
@@ -42,28 +44,176 @@ h5,
 h6,
 .h6 {
   text-transform: none;
-  letter-spacing: 3px;
+  letter-spacing: 1px;
 }
 
-/* .content-block {
-  padding-top: 20px;
-  padding-bottom: 10px;
+.header-banner {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.header-banner .header-image {
+  position: absolute;
+  display: none;
+  height: auto;
+}
+
+.header-text {
+  text-align: center;
+}
+
+.header-block {
+  padding-top: 66px;
+  padding-bottom: 70px;
   margin-left: 30px;
   margin-right: 30px;
+  max-width: 825px;
+  border-bottom: 0.5px solid black;
 }
 
+.header-block h2 {
+  margin-top: 70px;
+  border-bottom: 0px;
+}
 
 @media(min-width: 900px) {
-.content-block {
-  margin-left: 50px;
-  margin-right: 50px;
-}
-}
-
-@media (min-width: 1200px) {
-.content-block {
-  max-width: 1100px;
+.header-block {
   margin-left: auto;
   margin-right: auto;
 }
-} */
+}
+
+@media (min-width: 1080px) {
+.header-block {
+  margin-left: auto;
+  margin-right: auto;
+}
+}
+
+.article-block {
+  padding-top: 66px;
+  padding-bottom: 70px;
+  margin-left: 30px;
+  margin-right: 30px;
+  max-width: 825px;
+  border-bottom: 0.5px solid black;
+}
+
+@media(min-width: 900px) {
+.article-block {
+  margin-left: auto;
+  margin-right: auto;
+}
+}
+
+@media (min-width: 1080px) {
+.article-block {
+  margin-left: auto;
+  margin-right: auto;
+}
+}
+
+.article-block h2 {
+  margin-top: 70px;
+  border-bottom: 0px;
+  color: black;
+}
+
+.pullout-text {
+  text-align: center;
+}
+
+.pullout-block {
+  margin-top: 70px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
+  margin-left: 30px;
+  margin-right: 30px;
+  max-width: 825px;
+}
+
+.pullout-block p, h2 {
+  color: white;
+}
+
+@media(min-width: 900px) {
+.pullout-block {
+  margin-left: auto;
+  margin-right: auto;
+}
+}
+
+@media (min-width: 1080px) {
+.pullout-block {
+  margin-left: auto;
+  margin-right: auto;
+}
+}
+
+.button {
+  border: none;
+  border-radius: 0px;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.button p {
+  color: black;
+  margin-bottom: 0px;
+}
+
+.button:hover {
+  color: black;
+}
+
+.button1 {
+  background-color: white;
+}
+
+.bannerad-text {
+  text-align: center;
+}
+
+.bannerad-block {
+  margin-top: 70px;
+  padding-top: 70px;
+  padding-bottom: 70px;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 70px;
+  max-width: 825px;
+}
+
+.bannerad-block p {
+  color: white;
+  margin-bottom: 0px;
+}
+
+@media(min-width: 900px) {
+.bannerad-block {
+  margin-left: auto;
+  margin-right: auto;
+}
+}
+
+@media (min-width: 1080px) {
+.bannerad-block {
+  margin-left: auto;
+  margin-right: auto;
+}
+}
+
+.nav-footer {
+  height: 448px;
+}
