--- a/rwds.scss
+++ b/rwds.scss
@@ -3,3 +3,5 @@
 // Fonts
 @import 'https://fonts.googleapis.com/css2?family=Roboto&display=swap';
 $font-family: 'Roboto', sans-serif;
+
+$grid-gutter-width: 0px !default;
