--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,9 @@ h6,
   letter-spacing: 1px;
 }
 
+
+
+
 .header-banner {
   position: relative;
   display: flex;
@@ -91,6 +94,9 @@ h6,
 }
 }
 
+
+
+
 .article-block {
   padding-top: 66px;
   padding-bottom: 70px;
@@ -116,15 +122,16 @@ h6,
 
 .article-block h2 {
   margin-top: 70px;
+  margin-left: 0px;
   border-bottom: 0px;
   color: black;
 }
 
-.pullout-text {
-  text-align: center;
-}
+
+
 
 .pullout-block {
+  text-align: center;
   margin-top: 70px;
   padding-top: 50px;
   padding-bottom: 50px;
@@ -132,10 +139,12 @@ h6,
   padding-right: 50px;
   margin-left: 30px;
   margin-right: 30px;
-  max-width: 825px;
+  max-width: 1024px;
 }
 
-.pullout-block p, h2 {
+.pullout-block h2,
+.pullout-block p {
+  text-align: center;
   color: white;
 }
 
@@ -152,6 +161,9 @@ h6,
   margin-right: auto;
 }
 }
+
+
+
 
 .button {
   border: none;
@@ -179,6 +191,76 @@ h6,
   background-color: white;
 }
 
+
+
+
+.top-grid-text h6,
+.top-grid-text h2,
+.top-grid-text p {
+  text-align: left;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  color: white;
+}
+
+.top-grid-block {
+  padding-top: 70px;
+  margin-left: 30px;
+  margin-right: 30px;
+  max-width: 825px;
+}
+
+@media(min-width: 900px) {
+.top-grid-block {
+  margin-left: auto;
+  margin-right: auto;
+}
+}
+
+@media (min-width: 1080px) {
+.top-grid-block {
+  margin-left: auto;
+  margin-right: auto;
+}
+}
+
+.bottom-grid-text h6,
+.bottom-grid-text h2,
+.bottom-grid-text p {
+  text-align: left;
+  margin-top: 10px;
+  margin-right: 30px;
+  color: #6c757d;
+  border-bottom: none;
+}
+
+.bottom-grid-block {
+  padding-top: 30px;
+  padding-bottom: 70px;
+  margin-left: 30px;
+  margin-right: 30px;
+  max-width: 825px;
+  border-bottom: 0.5px solid black;
+}
+
+@media(min-width: 900px) {
+.bottom-grid-block {
+  margin-left: auto;
+  margin-right: auto;
+}
+}
+
+@media (min-width: 1080px) {
+.bottom-grid-block {
+  margin-left: auto;
+  margin-right: auto;
+}
+}
+
+
+
 .bannerad-text {
   text-align: center;
 }
@@ -196,6 +278,7 @@ h6,
 }
 
 .bannerad-block p {
+  text-align: center;
   color: white;
   margin-bottom: 0px;
 }
@@ -213,6 +296,9 @@ h6,
   margin-right: auto;
 }
 }
+
+
+
 
 .nav-footer {
   height: 448px;
