article design customisation, day 1

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,18 @@
-/*-- css styles --*/
+/*-- page defaults --*/
 #quarto-header {
   border-bottom: 0.5px solid black;
+}
+
+#quarto-content {
+  background-color: #f0eeeb;
 }
 
 .alt-background {
   background-color: black;
 }
 
+
+/*-- navbar --*/
 .navbar {
   max-height: 475px;
 }
@@ -32,7 +38,32 @@
   justify-content: center;
 }
 
-h1, .h1,
+
+/*-- quarto titles --*/
+#title-block-header {
+  margin-block-end: 1rem;
+  position: relative;
+  margin-top: -1px;
+  border-bottom: 0.5px solid black;
+  background-color: #f0eeeb;
+}
+
+.quarto-title-banner .quarto-title .title {
+  font-weight: 500;
+}
+
+#title-block-header.quarto-title-block.default .description {
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+#title-block-header.quarto-title-block.default .abstract > p {
+  font-weight: 300;
+  color: black;
+}
+
+
+/*-- fonts --*/
 h2,
 .h2,
 h3,
@@ -43,8 +74,22 @@ h5,
 .h5,
 h6,
 .h6 {
+  font-family: 'Oswald';
   text-transform: none;
   letter-spacing: 1px;
+}
+
+h1, .h1 {
+  font-family: 'Oswald';
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+body {
+  font-family: 'Montserrat';
+  font-weight: 400;
+  color: black;
 }
 
 
