title and body styling

--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,8 @@
-/*-- page defaults --*/
+/*-- navbar --*/
 #quarto-header {
   border-bottom: 0.5px solid black;
 }
 
-#quarto-content {
-  background-color: #f0eeeb;
-}
-
-.alt-background {
-  background-color: black;
-}
-
-
-/*-- navbar --*/
 .navbar {
   max-height: 475px;
 }
@@ -44,8 +34,27 @@
   margin-block-end: 1rem;
   position: relative;
   margin-top: -1px;
+  margin-bottom: 0;
   border-bottom: 0.5px solid black;
   background-color: #f0eeeb;
+}
+
+.quarto-title-banner {
+  margin-bottom: 0.75em;
+}
+
+@media (max-width: 991.98px) {
+.quarto-title-banner {
+    padding-top: 2.5em;
+    padding-bottom: 0;
+}
+}
+
+@media (min-width: 992px) {
+.quarto-title-banner {
+    padding-top: 2.5em;
+    padding-bottom: 0;
+}
 }
 
 .quarto-title-banner .quarto-title .title {
@@ -53,19 +62,86 @@
 }
 
 #title-block-header.quarto-title-block.default .description {
-  margin-top: 20px;
-  margin-bottom: 30px;
-}
-
-#title-block-header.quarto-title-block.default .abstract > p {
-  font-weight: 300;
+  margin-top: 1.5em;
+  font-weight: 400;
+  font-size: 1.2em;
   color: black;
 }
 
+.quarto-title .quarto-categories {
+  display: flex;
+  column-gap: 0.4em;
+  padding-bottom: 0.5em;
+  margin-top: 1.9em;
+}
+
+.quarto-title .quarto-categories .quarto-category {
+  padding: 0.25em 0.75em;
+  font-family: 'Oswald';
+  font-size: .9em;
+  font-weight: 400;
+  color: #939bc9;
+  text-transform: uppercase;
+  border: solid 1px;
+  border-radius: 0.25rem;
+  opacity: 1;
+}
+
+.quarto-title-meta {
+  padding-bottom: 1.8em;
+}
+
+#title-block-header.quarto-title-block.default .quarto-title-meta-heading {
+  font-family: 'Oswald';
+  text-transform: uppercase;
+  margin-top: 1em;
+  font-size: 0.9em;
+  opacity: 1;
+  font-weight: 400;
+}
+
+#title-block-header.quarto-title-block.default .quarto-title-meta-contents {
+  font-family: 'Oswald';
+  text-transform: uppercase;
+  font-weight: 300;
+  opacity: 0.8;
+  font-size: 0.9em;
+}
+
+
+/*-- main content --*/
+body.nav-fixed {
+  padding-top: 105px;
+  background-color: #f0eeeb;
+}
+
+#quarto-content {
+  background-color: #f0eeeb;
+}
+
+@media (max-width: 991.98px) {
+  #quarto-content {
+      padding-top: 1em;
+      padding-bottom: 0;
+  }
+}
+  
+@media (min-width: 992px) {
+  .quarto-content {
+    padding-top: 2.5em;
+    padding-bottom: 0;
+  }
+}
+
+h2.anchored {
+  margin-bottom: 0;
+}
+
+.alt-background {
+  background-color: black;
+}
 
 /*-- fonts --*/
-h2,
-.h2,
 h3,
 .h3,
 h4,
@@ -86,15 +162,27 @@ h1, .h1 {
   letter-spacing: 1px;
 }
 
+h2, .h2 {
+  font-family: 'Oswald';
+  font-weight: 500;
+  text-transform: none;
+  border-bottom: none;
+  letter-spacing: 1px;
+}
+
 body {
   font-family: 'Montserrat';
   font-weight: 400;
   color: black;
 }
 
+p > a {
+  color: #939bc9;
+  font-weight: 700;
+  text-decoration: none; 
+}
 
-
-
+/*-- homepage --*/
 .header-banner {
   position: relative;
   display: flex;
