further info box and other styling

--- a/styles.css
+++ b/styles.css
@@ -137,11 +137,101 @@ h2.anchored {
   margin-bottom: 0;
 }
 
-.alt-background {
-  background-color: black;
+blockquote {
+  margin: 0 0 1rem;
+  padding: 0.625rem 1.25rem;
+  border-left: 0.25rem solid black;
 }
 
-/*-- fonts --*/
+.blockquote {
+  font-size: inherit;
+  padding-left: 1rem;
+  padding-right: 1.5rem;
+  color: black;
+}
+
+.panel-caption, .figure-caption, figcaption {
+  color: black;
+  font-size: 0.825rem;
+  margin-bottom: 1rem;
+}
+
+#quarto-appendix.default {
+  background-color: #f0eeeb;
+  padding-top: 1.5em;
+  margin-top: 2em;
+  z-index: 998;
+  border-top: 0.5px solid black
+}
+
+::marker {
+  font-variant-numeric: normal;
+}
+
+.further-info {
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+  padding-top: 1.5em;
+  padding-bottom: .75em;
+  border-top: 0.5px solid black;
+  border-bottom: 0.5px solid black;
+}
+
+/*-- sidebar --*/
+.sidebar nav[role=doc-toc]>h2, .sidebar nav[role=doc-toc]>.h2 {
+  font-family: 'Oswald';
+  font-size: .875rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  margin-bottom: 0.5rem;
+  margin-top: 0.3rem;
+  border-bottom: 0;
+  padding-bottom: 0;
+  padding-top: 0px;
+}
+
+.sidebar nav[role=doc-toc] ul>li>a.active {
+  border-left: 0.5px solid #939bc9;
+  font-weight: 500;
+  color: #939bc9 !important;
+}
+
+.sidebar nav[role=doc-toc]>ul a {
+  border-left: none;
+  padding-left: 0.6rem;
+}
+
+.sidebar nav[role=doc-toc]>ul li a {
+  font-family: 'Montserrat';
+  font-weight: 500;
+  line-height: 1.1rem;
+  padding-bottom: 0.2rem;
+  padding-top: 0.2rem;
+  color: black;
+}
+
+.toc-actions a {
+  text-decoration: none;
+  font-family: 'Montserrat';
+  font-weight: 500;
+  color: black;
+}
+
+.column-margin figcaption, .margin-caption, div.aside, aside, .column-margin p {
+  font-family: 'Montserrat';
+  font-weight: 400;
+  color: black;
+  font-size: .825rem;
+  text-decoration: none;
+}
+
+.column-margin, .figure-caption a {
+  text-decoration: none;
+  color: #939bc9;
+  font-weight: 700;
+}
+
+/*-- font styles --*/
 h3,
 .h3,
 h4,
@@ -182,7 +272,37 @@ p > a {
   text-decoration: none; 
 }
 
-/*-- homepage --*/
+b, strong a {
+  text-decoration: none;
+  color: #939bc9;
+}
+
+ul a {
+  color: #939bc9;
+  font-weight: 700;
+  text-decoration: none; 
+}
+
+dd a {
+  color: #939bc9;
+  font-weight: 700;
+  text-decoration: none; 
+}
+
+/*-- datasciencebites --*/
+.dsb {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
+}
+
+
+/*-- homepage styles --*/
+.alt-background {
+  background-color: black;
+}
+
 .header-banner {
   position: relative;
   display: flex;
@@ -429,10 +549,10 @@ p > a {
   margin-right: auto;
 }
 }
-
+/* 
 
 
 
 .nav-footer {
   height: 448px;
-}
+} */
