data-sci-act article initial upload

--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,12 @@
   margin-right: auto;
   width: 200px;
 }
+
+.further-info {
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+  padding-top: 1.5em;
+  padding-bottom: .75em;
+  border-top: 0.5px solid black;
+  border-bottom: 0.5px solid black;
+}
