News and views section reorg

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@
   max-height: 475px;
   flex-wrap: inherit;
   align-items: baseline;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
 
