navbar styling and font spacing

--- a/rwds.css
+++ b/rwds.css
@@ -1,17 +1,16 @@
 /*-- navbar --*/
+.navbar {
+  padding-top: 0;
+  padding-bottom: 0;
+  font-family: 'Oswald';
+  font-weight: 400;
+  letter-spacing: 1px;
+  margin-right: 2rem;
+  font-size: 1em;
+}
+
 #quarto-header {
   border-bottom: 1px solid black;
-}
-
-.navbar {
-  max-height: 475px;
-}
-
-.navbar-logo {
-  max-height: 150px;
-  width: auto;
-  padding-right: 4px;
-  align-items: baseline;
 }
 
 .navbar > .container,
@@ -22,12 +21,61 @@
 .navbar > .container-xl,
 .navbar > .container-xxl {
   display: flex;
-  max-height: 475px;
   flex-wrap: inherit;
   align-items: baseline;
   /* justify-content: center; */
 }
 
+.navbar-brand-container {
+  display: flex;
+  padding-top: 0;
+  margin-left: 4em;
+  padding-bottom: 0;
+}
+
+@media (max-width: 1200px) {
+  .navbar-brand-container {
+    margin-left: 0;
+}
+}
+  
+.navbar-brand.navbar-brand-logo {
+  display: inline;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.navbar-logo {
+  max-height: 185px;
+  width: auto;
+  align-items: baseline;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+  color: black;
+}
+
+.navbar-dark .navbar-nav .show>.nav-link, .navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active {
+  color: #939bc9;
+}
+
+
+.dropdown-item {
+  font-family: inherit;
+  letter-spacing: 1px;
+  display: block;
+  width: 100%;
+  padding: 0.25rem 1rem;
+  clear: both;
+  font-weight: 400;
+  color: #666666;
+  text-align: inherit;
+  text-decoration: none;
+  text-transform: uppercase;
+  white-space: nowrap;
+  background-color: rgba(0,0,0,0);
+  border: 0;
+}
 
 /*-- quarto titles --*/
 #title-block-header {
@@ -80,6 +128,7 @@
   font-family: 'Oswald';
   font-size: .9em;
   font-weight: 400;
+  letter-spacing: 1px;
   color: #939bc9;
   text-transform: uppercase;
   border: solid 1px;
@@ -94,6 +143,7 @@
 #title-block-header.quarto-title-block.default .quarto-title-meta-heading {
   font-family: 'Oswald';
   text-transform: uppercase;
+  letter-spacing: 1px;
   margin-top: 1em;
   font-size: 0.9em;
   opacity: 1;
@@ -103,6 +153,7 @@
 #title-block-header.quarto-title-block.default .quarto-title-meta-contents {
   font-family: 'Oswald';
   text-transform: uppercase;
+  letter-spacing: 1px;
   font-weight: 300;
   opacity: 0.8;
   font-size: 0.9em;
@@ -122,20 +173,6 @@ body.nav-fixed {
 #quarto-content>* {
   padding-top: 0;
 }
-
-/* @media (max-width: 991.98px) {
-  #quarto-content {
-      padding-top: 1em;
-      padding-bottom: 0;
-  }
-}
-  
-@media (min-width: 992px) {
-  .quarto-content {
-    padding-top: 2.5em;
-    padding-bottom: 0;
-  }
-} */
 
 h2.anchored {
   margin-bottom: 0;
@@ -190,6 +227,7 @@ blockquote {
   font-family: 'Oswald';
   font-weight: 500;
   font-size: 1.3em;
+  letter-spacing: 1px;
   text-transform: uppercase;
   margin-bottom: 0px;
 }
@@ -272,14 +310,14 @@ h6,
 .h6 {
   font-family: 'Oswald';
   text-transform: none;
-  letter-spacing: 1px;
+  letter-spacing: normal;
 }
 
 h1, .h1 {
   font-family: 'Oswald';
   font-weight: 500;
   text-transform: uppercase;
-  letter-spacing: 1px;
+  letter-spacing: normal;
 }
 
 h2, .h2 {
@@ -287,13 +325,14 @@ h2, .h2 {
   font-weight: 500;
   text-transform: none;
   border-bottom: none;
-  letter-spacing: 1px;
+  letter-spacing: normal;
 }
 
 body {
   font-family: 'Montserrat';
   font-weight: 400;
   color: black;
+  letter-spacing: normal;
 }
 
 p > a {
