set logo size for tablet and mobile

--- a/rwds.css
+++ b/rwds.css
@@ -34,8 +34,8 @@
 }
 
 @media (max-width: 1200px) {
-  .navbar-brand-container {
-    margin-left: 0;
+.navbar-brand-container {
+  margin-left: 0;
 }
 }
   
@@ -46,9 +46,17 @@
 }
 
 .navbar-logo {
-  max-height: 185px;
+  max-height: 150px;
   width: auto;
   align-items: baseline;
+}
+
+@media (max-width: 768px) {
+.navbar-logo {
+  max-height: 100px;
+  width: auto;
+  align-items: baseline;
+}
 }
 
 .navbar-dark .navbar-nav .nav-link {
