--- a/rwds.css
+++ b/rwds.css
@@ -3,9 +3,7 @@
   padding-top: 0;
   padding-bottom: 0;
   font-family: 'Oswald';
-  font-weight: 400;
-  letter-spacing: 1px;
-  margin-right: 2rem;
+  /* margin-right: 2rem; */
   font-size: 1em;
 }
 
@@ -43,6 +41,7 @@
   display: inline;
   padding-top: 0;
   padding-bottom: 0;
+  margin-right: 0;
 }
 
 .navbar-logo {
@@ -51,7 +50,7 @@
   align-items: baseline;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1200px) {
 .navbar-logo {
   max-height: 100px;
   width: auto;
@@ -61,6 +60,7 @@
 
 .navbar-dark .navbar-nav .nav-link {
   color: black;
+  font-weight: 400;
 }
 
 .navbar-dark .navbar-nav .show>.nav-link, .navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active {
@@ -75,8 +75,8 @@
   width: 100%;
   padding: 0.25rem 1rem;
   clear: both;
-  font-weight: 400;
-  color: #666666;
+  font-weight: 300;
+  color: black;
   text-align: inherit;
   text-decoration: none;
   text-transform: uppercase;
@@ -336,6 +336,13 @@ h2, .h2 {
   letter-spacing: normal;
 }
 
+h3, .h3 {
+  font-family: 'Oswald';
+  font-weight: 500;
+  text-transform: none;
+  letter-spacing: normal;
+}
+
 body {
   font-family: 'Montserrat';
   font-weight: 400;
@@ -364,6 +371,57 @@ dd a {
   color: #939bc9;
   font-weight: 700;
   text-decoration: none; 
+}
+
+
+/*-- listing styles --*/
+div.quarto-post {
+  border-bottom: 1px solid black;
+}
+
+div.quarto-post .metadata {
+  font-family: 'Oswald';
+  font-weight: 300;
+  text-transform: uppercase;
+}
+
+div.quarto-post .listing-categories .listing-category {
+  color: #939bc9;
+  border: solid 1px #939bc9;
+  font-family: 'Oswald';
+  font-weight: 400;
+  font-size: .75em;
+}
+
+div.quarto-post a {
+  color: black;
+}
+
+#quarto-margin-sidebar .quarto-listing-category-title {
+  font-weight: 500;
+  text-transform: uppercase;
+  font-size: .875rem;
+}
+
+.quarto-listing-category .category {
+  font-weight: 500;
+  font-size: .825rem;
+}
+
+.quarto-listing-category .category.active {
+  font-weight: 500;
+  color: #939bc9;
+}
+
+.nav-page .nav-page-text {
+  font-family: 'Oswald';
+  font-weight: 500;
+  text-transform: uppercase;
+  color: black;
+}
+
+.nav-page .bi {
+  color: black;
 }
 
 /*-- datasciencebites --*/
