grid list styling

--- a/rwds.css
+++ b/rwds.css
@@ -3,7 +3,6 @@
   padding-top: 0;
   padding-bottom: 0;
   font-family: 'Oswald';
-  /* margin-right: 2rem; */
   font-size: 1em;
 }
 
@@ -312,8 +311,6 @@ h3,
 .h3,
 h4,
 .h4,
-h5,
-.h5,
 h6,
 .h6 {
   font-family: 'Oswald';
@@ -336,7 +333,10 @@ h2, .h2 {
   letter-spacing: normal;
 }
 
-h3, .h3 {
+h3, 
+.h3,
+h5,
+.h5 {
   font-family: 'Oswald';
   font-weight: 500;
   text-transform: none;
@@ -423,6 +423,58 @@ div.quarto-post a {
 .nav-page .bi {
   color: black;
 }
+
+
+/*-- grid listing --*/
+.quarto-grid-item {
+  border: none;
+  background-color: #f0eeeb;
+}
+
+.quarto-grid-item.borderless {
+  border: none;
+  background-color: #f0eeeb;
+}
+
+/* .card-img, .card-img-top, .card-img-bottom {
+  display: none;
+} */
+
+.quarto-grid-item div.post-contents {
+  padding: 0;
+}
+
+.quarto-grid-item .card-title {
+  margin-top: 0.5em;
+  margin-bottom: 0.75em;
+}
+
+.quarto-grid-item .listing-categories {
+  display: flex;
+  flex-wrap: wrap;
+  padding-bottom: .5em;
+}
+
+.quarto-grid-item .listing-categories .listing-category {
+  color: #939bc9;
+  border: solid 1px #939bc9 !important;
+  font-family: 'Oswald';
+  font-weight: 400;
+  font-size: .75em;
+}
+
+.quarto-grid-item .card-attribution.justify {
+  justify-content: left;
+}
+
+.quarto-grid-item .card-attribution {
+  font-family: 'Oswald';
+  font-weight: 300;
+  color: black;
+  flex-grow: 10;
+  align-items: flex-end;
+}
+
 
 /*-- datasciencebites --*/
 .dsb {
