newsletter heading style

--- a/rwds.css
+++ b/rwds.css
@@ -373,6 +373,10 @@ dd a {
   text-decoration: none; 
 }
 
+a.listing-title {
+  text-decoration: none;
+}
+
 
 /*-- listing styles --*/
 div.quarto-post {
