nav-footer font styling

--- a/rwds.css
+++ b/rwds.css
@@ -62,10 +62,18 @@
   font-weight: 400;
 }
 
+.navbar-dark .navbar-nav .nav-link:hover {
+  color: #939bc9;
+  font-weight: 400;
+}
+
 .navbar-dark .navbar-nav .show>.nav-link, .navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active {
   color: #939bc9;
 }
 
+.nav-item {
+  margin-right: 1rem;
+}
 
 .dropdown-item {
   font-family: inherit;
@@ -480,15 +488,6 @@ div.quarto-post a {
 }
 
 
-/*-- datasciencebites --*/
-.dsb {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 200px;
-}
-
-
 /*-- homepage styles --*/
 .alt-background {
   background-color: black;
@@ -743,7 +742,24 @@ div.quarto-post a {
 /* 
 
 
-
+/*-- nav footer styles --*/
 .nav-footer {
-  height: 448px;
-} */
+  color: white;
+  font-family: 'Oswald';
+  font-weight: 400;
+}
+
+.nav-footer a {
+  color: white;
+  text-decoration: none;
+}
+
+.nav-footer a:hover {
+  color: #939bc9;
+  text-decoration: none;
+}
+
+.nav-link {
+  font-weight: 400;
+  text-transform: uppercase;
+}
