--- a/rwds.css
+++ b/rwds.css
@@ -26,7 +26,7 @@
 .navbar-brand-container {
   display: flex;
   padding-top: 0;
-  margin-left: 4em;
+  margin-left: 8em;
   padding-bottom: 0;
 }
 
@@ -143,7 +143,6 @@
   font-family: 'Oswald';
   font-size: .9em;
   font-weight: 400;
-  letter-spacing: 1px;
   color: #939bc9;
   text-transform: uppercase;
   border: solid 1px;
@@ -158,7 +157,6 @@
 #title-block-header.quarto-title-block.default .quarto-title-meta-heading {
   font-family: 'Oswald';
   text-transform: uppercase;
-  letter-spacing: 1px;
   margin-top: 1em;
   font-size: 0.9em;
   opacity: 1;
@@ -168,7 +166,6 @@
 #title-block-header.quarto-title-block.default .quarto-title-meta-contents {
   font-family: 'Oswald';
   text-transform: uppercase;
-  letter-spacing: 1px;
   font-weight: 300;
   opacity: 0.8;
   font-size: 0.9em;
@@ -739,7 +736,54 @@ div.quarto-post a {
   margin-right: auto;
 }
 }
-/* 
+
+
+/*-- footer style --*/
+
+.footer-background {
+  background-color: black;
+  width: 100%;
+}
+
+.footer-text h3, .h3 {
+  font-family: 'Oswald';
+  color: white;
+  font-size: .875rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  margin-bottom: 0.5rem;
+  margin-top: 0.3rem;
+  border-bottom: 0;
+  padding-bottom: 0;
+  padding-top: 0px;
+}
+
+.footer-text p, .p {
+  color: white;
+  font-size: .875rem;
+  font-weight: 400;
+}
+
+.content-block {
+  padding-top: 66px;
+  padding-bottom: 70px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 825px;
+  color: white;
+}
+
+@media (max-width: 855px) {
+.content-block {
+  padding-top: 66px;
+  padding-bottom: 70px;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin: auto;
+  max-width: 825px;
+  color: white;
+}
+}
 
 
 /*-- nav footer styles --*/
@@ -759,7 +803,7 @@ div.quarto-post a {
   text-decoration: none;
 }
 
-.nav-link {
+.nav-footer-left .footer-items .nav-link, .nav-footer-center .footer-items .nav-link, .nav-footer-right .footer-items .nav-link {
   font-weight: 400;
   text-transform: uppercase;
 }
