sml logo centre positioning

--- a/rwds.css
+++ b/rwds.css
@@ -21,7 +21,8 @@
 
 @media (max-width: 991px) {
   .navbar-brand.navbar-brand-logo {
-    margin-left: 0;
+    margin-left: 5vw;
+    margin-right: 10vw;
 }
 }
 
