--- a/rwds.css
+++ b/rwds.css
@@ -215,6 +215,17 @@ blockquote {
   margin-bottom: 1rem;
 }
 
+.citation a, .footnote-ref {
+  text-decoration: none;
+  color: #939bc9;
+  font-weight: 700;
+}
+
+div.csl-entry {
+  color: black;
+  font-weight: 400;
+}
+
 #quarto-appendix.default {
   background-color: #f0eeeb;
   padding-top: 1.5em;
@@ -386,6 +397,22 @@ dd a {
 
 a.listing-title {
   text-decoration: none;
+}
+
+.table {
+  color: black;
+}
+
+.table th, .table td {
+  padding: 0.75rem;
+}
+
+th {
+  text-transform: none;
+}
+
+tr {
+  border-color: black;
 }
 
 
