--- a/rwds.css
+++ b/rwds.css
@@ -771,6 +771,15 @@ div.quarto-post a {
 }
 
 
+/*-- DataScienceBites --*/
+.dsb {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
+}
+
+
 /*-- footer style --*/
 
 .footer-background {
