fixed footer nav item margin

--- a/rwds.css
+++ b/rwds.css
@@ -250,6 +250,7 @@ div.csl-entry {
   margin-top: 1.5em;
   margin-bottom: 1.5em;
   cursor: pointer;
+  width: 100%;
 }
 
 .article-btn p {
@@ -848,4 +849,8 @@ div.quarto-post a {
 .nav-footer-left .footer-items .nav-link, .nav-footer-center .footer-items .nav-link, .nav-footer-right .footer-items .nav-link {
   font-weight: 400;
   text-transform: uppercase;
+}
+
+.nav-footer-left .footer-items .nav-item, .nav-footer-center .footer-items .nav-item, .nav-footer-right .footer-items .nav-item {
+  margin-top: 0;
 }
