footer content added

--- a/rwds.css
+++ b/rwds.css
@@ -807,6 +807,18 @@ div.quarto-post a {
   font-weight: 400;
 }
 
+.footer-text p > a {
+  color: white;
+  font-size: .875rem;
+  font-weight: 400;
+}
+
+.footer-text p > a:hover {
+  color: #939bc9;
+  font-size: .875rem;
+  font-weight: 400;
+}
+
 .content-block {
   padding-top: 66px;
   padding-bottom: 70px;
