T&Cs added and bottom nav complete

--- a/rwds.css
+++ b/rwds.css
@@ -315,6 +315,10 @@ div.csl-entry {
   color: black;
 }
 
+#quarto-margin-sidebar .toc-actions .bi:before {
+  color: black;
+}
+
 .column-margin figcaption, .margin-caption, div.aside, aside, .column-margin p {
   font-family: 'Montserrat';
   font-weight: 400;
@@ -478,10 +482,6 @@ div.quarto-post a {
   border: none;
   background-color: #f0eeeb;
 }
-
-/* .card-img, .card-img-top, .card-img-bottom {
-  display: none;
-} */
 
 .quarto-grid-item div.post-contents {
   padding: 0;
@@ -865,4 +865,16 @@ div.quarto-post a {
 
 .nav-footer-left .footer-items .nav-item, .nav-footer-center .footer-items .nav-item, .nav-footer-right .footer-items .nav-item {
   margin-top: 0;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
+.nav-footer-left {
+  font-family: 'Montserrat';
+  margin-left: 5vw;
+}
+
+.nav-footer-right {
+  font-family: 'Montserrat';
+  margin-right: 5vw;
 }
