--- a/rwds.css
+++ b/rwds.css
@@ -848,6 +848,10 @@ div.quarto-post a {
   font-weight: 400;
 }
 
+body:not(.floating) .nav-footer {
+  border-top: 1px solid #f0eeeb;
+}
+
 .nav-footer a {
   color: white;
   text-decoration: none;
