fixed image scaling and added pagetitles

--- a/rwds.css
+++ b/rwds.css
@@ -518,6 +518,10 @@ div.quarto-post a {
   align-items: flex-end;
 }
 
+.quarto-grid-item img.thumbnail-image {
+  object-fit: cover;
+  height: 188px !important;
+}
 
 /*-- homepage styles --*/
 .alt-background {
