logo position updated

--- a/rwds.css
+++ b/rwds.css
@@ -16,7 +16,7 @@
   padding-top: 0;
   padding-bottom: 0;
   margin-right: 0;
-  margin-left: 3vw;
+  margin-left: 1.5em;
 }
 
 @media (max-width: 991px) {
